--- a/style/global.css
+++ b/style/global.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-: :root {
+:root {
     --brand_color: #EF5F4C;
     --background-color: #FFFFFF;
     --surface-color: #F5F5F5;
@@ -12,6 +12,15 @@
     --shape-transparency: hsla(0, 0%, 100%, 0.56);
     --text-color-primary: #313131;
     --text-color-secondary: #6C6C6C;
+
+    --font-family: "Poppins", sans-serif;
+    --font-lg:  32px/125% bold var(--font-family);
+    --font-rg: 16px/1.5 var(--font-family);
+    --font-md: 14px/170% var(--font-family);
+    --font-sm: 12px/170% var(--font-md);z
 }
 
-.body {
+body {
+    color: var(--text-color-secondary);
+    background-color: var(--background-color);
+}
