--- a/style/global.css
+++ b/style/global.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-    --brand_color: #EF5F4C;
+    --brand-color: #EF5F4C;
     --background-color: #FFFFFF;
     --surface-color: #F5F5F5;
     --skeleton-color: #D9D9D9;
@@ -15,10 +15,10 @@
     --text-color-secondary: #6C6C6C;
 
     --font-family: "Poppins", sans-serif;
-    --font-lg:  32px/125% bold var(--font-family);
+    --font-lg: bold 32px/125% var(--font-family);
     --font-rg: 16px/1.5 var(--font-family);
     --font-md: 14px/170% var(--font-family);
-    --font-sm: 12px/170% var(--font-md);
+    --font-sm: 12px/170% var(--font-family);
 }
 
 body {
